--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
                     <li>Self-learned web development and digital marketing tools (e.g., CMS platforms, SEO tools, analytics dashboards) to take ownership of the company’s entire digital presence.</li>
                     <li>Collaborated directly with engineers and business stakeholders to align technical product features with marketing content, ensuring accuracy and relevance in B2B messaging.</li>
                 </ul>
+</body>
+<footer>
     <a href = "mailto:someone@example.com">Email</a>
     <p><b>Telephone:</b> 058301385</p>
-</body>
+</footer>
 </html>
